Fix for Bug #16121: make unix socket names binary safe. # Could be applied to 4.2 branch, but I don't have a working copy, and # I don't think it's amazingly critical.